# functino

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_exe.bat  build_exe.sh  pyproject.toml
src/functino/: execute.py  file.py  language.py  platform_path.py  project_path.py
src/functino/gui/: __init__.py  editor.py  exception.py  icon.py  language.py  theme.py  window.py
src/functino/resources/language_profiles/: c_gcc.toml  cpp_gcc.toml  nodejs.toml  python.toml  ruby.toml
src/functino/resources/themes/: light.xml
src/mnar/: execute.py  file.py  language.py  platform_path.py  project_path.py
src/mnar/gui/: __init__.py  editor.py  icon.py  language.py  theme.py  window.py
src/mnar/resources/language_profiles/: python.toml  rust.toml
src/mnar/resources/themes/: README.md
