[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "functino"
version = "0.0.1"
authors = [
    { name="David Scholberg", email="recombinant.vector@gmail.com" },
]
description = "Simple code editor and runner for throwaway code"
dependencies = [
    "PyQt6",
    "PyQt6-QScintilla",
]

[project.optional-dependencies]
dev = [
    "black",
    "docformatter",
    "pre-commit",
]

# This is mainly for debugging on windows so that we can see stderr.
[project.scripts]
functinoc = "functino.gui:run"

[project.gui-scripts]
functino = "functino.gui:run"
